--- a/index.html
+++ b/index.html
@@ -2,25 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>✅ To-Do List App</title>
-  <link rel="stylesheet" href="styles.css"/>
-  <link rel="preconnect" href="https://fonts.googleapis.com"/>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"/>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
 </head>
 <body class="light">
   <div class="page-wrapper">
-    <h1>To-Do List</h1>
 
-    <!-- ✅ Toggle Theme Button -->
-    <button id="themeToggle" aria-label="Toggle Theme">
+    <!-- ✅ Header with H1 and Theme Toggle -->
+    <div class="header-row">
+      <h1>To-Do List</h1>
+      <button id="themeToggle" aria-label="Toggle Theme">
         <span class="tooltip">Toggle Theme</span>
-    </button>
+      </button>
+    </div>
 
     <!-- ✅ Task Input Section -->
     <div id="myDIV">
-      <input type="text" id="myInput" placeholder="Add a task..." maxlength="40">
+      <input type="text" id="myInput" placeholder="Add a task..." maxlength="40" />
       <button onclick="newElement()" class="addBtn">Add</button>
     </div>
 
@@ -35,4 +37,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
