--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="page-wrapper">
     <!-- Header section with H1 and Theme Toggle aligned horizontally -->
     <div class="header-row">
-      <h1>To-Do List</h1>
+      <h1 class="shadow-dance-text">To-Do List</h1>
       <button id="themeToggle" aria-label="Toggle Theme">
         <span class="tooltip">Toggle Theme</span>
       </button>
