Add asset folders and amend the code

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>✅ To-Do List App</title>
 
   <!-- Link to external stylesheet -->
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
 
   <!-- Google Fonts (Roboto) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,7 +42,7 @@
   </footer>
 
   <!-- Link to JavaScript -->
-  <script src="script.js"></script>
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
 
