Add scrennshots to READ.ME file

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>✅ To-Do List App</title>
+  <title>To-Do List App</title>
 
   <!-- Link to external stylesheet -->
   <link rel="stylesheet" href="assets/css/styles.css">
+
+  <link type="image/png" sizes="32x32" rel="icon" href="assets/images/icons8-done-32.png">
 
   <!-- Google Fonts (Roboto) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
