--- a/index.html
+++ b/index.html
@@ -6,45 +6,47 @@
   <title>To-Do List App</title>
 
   <!-- Link to external stylesheet -->
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="assets/css/styles.css"> <!-- Links the CSS file for styling -->
 
-  <link type="image/png" sizes="32x32" rel="icon" href="assets/images/icons8-done-32.png">
+  <link type="image/png" sizes="32x32" rel="icon" href="assets/images/icons8-done-32.png"> <!-- Favicon for the app -->
 
   <!-- Google Fonts (Roboto) -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- Preconnect to Google Fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- Preconnect for faster font loading -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> <!-- Roboto font -->
 </head>
-<body class="light">
-  <div class="page-wrapper">
+<body class="light"> <!-- Default theme is light; toggled by the "dark" class -->
+
+  <div class="page-wrapper"> <!-- Wrapper for the main content -->
+    
     <!-- Header section with H1 and Theme Toggle aligned horizontally -->
-    <div class="header-row">
-      <h1 class="shadow-dance-text">To-Do List</h1>
-      <button id="themeToggle" aria-label="Toggle Theme">
-        <span class="tooltip">Toggle Theme</span>
+    <div class="header-row"> <!-- Styled using the "header-row" class -->
+      <h1 class="shadow-dance-text">To-Do List</h1> <!-- Header text with animated shadow effect -->
+      <button id="themeToggle" aria-label="Toggle Theme"> <!-- Button to toggle between light and dark themes -->
+        <span class="tooltip">Toggle Theme</span> <!-- Tooltip displayed on hover -->
       </button>
     </div>
 
     <!-- Task input area -->
-    <div id="myDIV">
+    <div id="myDIV"> <!-- Container for the input field and add button -->
       <input
         type="text"
         id="myInput"
         placeholder="Add a task..."
-        maxlength="40">
-      <button onclick="newElement()" class="addBtn">Add</button>
+        maxlength="40"> <!-- Maximum character limit for tasks -->
+      <button onclick="newElement()" class="addBtn">Add</button> <!-- Button to add a new task; calls the "newElement" function -->
     </div>
 
     <!-- Task list -->
-    <ul id="myUL"></ul>
+    <ul id="myUL"></ul> <!-- Unordered list to display tasks; tasks are dynamically added here by JavaScript -->
   </div>
 
   <footer>
-    <p>Made with ❤️ by Irina Leeming</p>
+    <p>Made with ❤️ by Irina Leeming</p> <!-- Footer text -->
   </footer>
 
   <!-- Link to JavaScript -->
-  <script src="assets/js/script.js"></script>
+  <script src="assets/js/script.js"></script> <!-- Links the JavaScript file for functionality -->
 </body>
 </html>
 
