--- a/index.html
+++ b/index.html
@@ -1,59 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>To-Do List App</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>To-Do List App</title>
 
-  <!-- Link to external stylesheet -->
-  <link rel="stylesheet" href="assets/css/styles.css"> <!-- Links the CSS file for styling -->
+    <!-- Link to external stylesheet -->
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <!-- Links the CSS file for styling -->
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
 
+    <link
+      type="image/png"
+      sizes="32x32"
+      rel="icon"
+      href="assets/images/icons8-done-32.png"
+    />
+    <!-- Favicon for the app -->
 
-  <link type="image/png" sizes="32x32" rel="icon" href="assets/images/icons8-done-32.png"> <!-- Favicon for the app -->
+    <!-- Google Fonts (Roboto) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- Preconnect to Google Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Preconnect for faster font loading -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Roboto font -->
 
-  <!-- Google Fonts (Roboto) -->
-  <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- Preconnect to Google Fonts -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- Preconnect for faster font loading -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> <!-- Roboto font -->
-</head>
-<body class="light"> <!-- Default theme is light; toggled by the "dark" class -->
+    <!-- Bootstrap CSS CDN -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body class="light">
+    <!-- Default theme is light; toggled by the "dark" class -->
 
-  <div class="page-wrapper"> <!-- Wrapper for the main content -->
-    
-    <!-- Header section with H1 and Theme Toggle aligned horizontally -->
-    <div class="header-row"> <!-- Styled using the "header-row" class -->
-      <h1 class="shadow-dance-text">To-Do List</h1> <!-- Header text with animated shadow effect -->
-      <div class="theme-toggle">
-        <button id="lightMode" class="sun active">☀️</button>
-        <button id="darkMode" class="moon">🌙</button>
-      </div>      
-      
-    </div>
+    <div class="page-wrapper">
+      <!-- Wrapper for the main content -->
 
-    <!-- Task input area -->
-    <div id="myDIV"> <!-- Container for the input field and add button -->
-      <input
-        type="text"
-        id="myInput"
-        placeholder="Add a task..."
-        maxlength="40"> <!-- Maximum character limit for tasks -->
-        <button onclick="newElement()" class="addBtn">
+      <!-- Header section with H1 and Theme Toggle aligned horizontally -->
+      <div class="header-row">
+        <!-- Styled using the "header-row" class -->
+        <h1 class="shadow-dance-text">To-Do List</h1>
+        <!-- Header text with animated shadow effect -->
+        <div class="theme-toggle">
+          <button id="lightMode" class="sun active">☀️</button>
+          <button id="darkMode" class="moon">🌙</button>
+        </div>
+      </div>
+
+      <!-- Task input area -->
+      <div id="myDIV">
+        <!-- Container for the input field and add button -->
+        <input
+          type="text"
+          id="myInput"
+          placeholder="Add a task..."
+          maxlength="40"
+        />
+        <!-- Maximum character limit for tasks -->
+        <button onclick="newElement()" class="addBtn" id="addBtnDropTarget">
           <i class="fa-solid fa-check"></i>
-        </button> <!-- Button to add a new task; calls the "newElement" function -->
+        </button>
+        <!-- Button to add a new task; calls the "newElement" function -->
+      </div>
+
+      <!-- Task list -->
+      <ul id="myUL"></ul>
+      <!-- Unordered list to display tasks; tasks are dynamically added here by JavaScript -->
+
+      <!-- New: Draggable Cards Section - Moved to bottom of main content -->
+      <div class="draggable-cards-section container mt-4">
+        <h2 class="text-center mb-3">Drag & Drop Ideas</h2>
+        <div class="row g-3 justify-content-center">
+          <!-- col-6 for mobile (2 per row), col-md-3 for medium (4 per row), col-lg-2 for large (6 per row) -->
+          <div class="col-6 col-md-3 col-lg-2">
+            <div class="card draggable-card" draggable="true" data-task="Buy groceries">
+              <div class="card-body text-center">
+                <h5 class="card-title mb-0">Buy groceries</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-md-3 col-lg-2">
+            <div class="card draggable-card" draggable="true" data-task="Call mom">
+              <div class="card-body text-center">
+                <h5 class="card-title mb-0">Do studying</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-md-3 col-lg-2">
+            <div class="card draggable-card" draggable="true" data-task="Finish report">
+              <div class="card-body text-center">
+                <h5 class="card-title mb-0">Clean the house</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-md-3 col-lg-2">
+            <div class="card draggable-card" draggable="true" data-task="Go for a run">
+              <div class="card-body text-center">
+                <h5 class="card-title mb-0">Walk the dog</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-md-3 col-lg-2">
+            <div class="card draggable-card" draggable="true" data-task="Read a book">
+              <div class="card-body text-center">
+                <h5 class="card-title mb-0">Read a book</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-6 col-md-3 col-lg-2">
+            <div class="card draggable-card" draggable="true" data-task="Plan weekend">
+              <div class="card-body text-center">
+                <h5 class="card-title mb-0">Cook dinner</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End New: Draggable Cards Section -->
     </div>
 
-    <!-- Task list -->
-    <ul id="myUL"></ul> <!-- Unordered list to display tasks; tasks are dynamically added here by JavaScript -->
-  </div>
+    <!-- This is the container for the firework effect and the message -->
+    <div id="fireworkOverlay" class="firework-overlay-container"></div>
 
-  <footer>
-    <p>Made with ❤️ by Irina Leeming</p> <!-- Footer text -->
-  </footer>
+    <footer>
+      <p>Made with ❤️ by Irina Leeming</p>
+      <!-- Footer text -->
+    </footer>
 
-  <!-- Link to JavaScript -->
-  <script src="assets/js/script.js"></script> <!-- Links the JavaScript file for functionality -->
-</body>
+    <!-- Link to JavaScript -->
+    <script src="assets/js/script.js"></script>
+    <!-- Links the JavaScript file for functionality -->
+    <!-- Bootstrap JS (optional, not strictly needed for grid/cards but good practice) -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
-
