Add note to mark tasks complete

--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
         <!-- Button to add a new task; calls the "newElement" function -->
       </div>
 
+      <div id="completion-note">
+        Please press on the task to mark it complete!
+      </div>
+
       <!-- Task list -->
       <ul id="myUL"></ul>
       <!-- Unordered list to display tasks; tasks are dynamically added here by JavaScript -->
