Change the style of the text

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
 
       <div id="completion-note">
-        Please press on the task to mark it complete!
+        Task tango! Click to check, click to uncheck. Let's get things done!
       </div>
 
       <!-- Task list -->
