Amend margins, paddings, and font sizes

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
           maxlength="40"
         />
         <!-- Maximum character limit for tasks -->
+
+        <!-- This is the container for the styled empty task message -->
+        <div id="emptyTaskMessage" class="message-container"></div>
+
         <button onclick="newElement()" class="addBtn" id="addBtnDropTarget">
           <i class="fa-solid fa-check"></i>
         </button>
@@ -88,42 +92,66 @@
         <div class="row g-3 justify-content-center">
           <!-- col-6 for mobile (2 per row), col-md-3 for medium (4 per row), col-lg-2 for large (6 per row) -->
           <div class="col-6 col-md-3 col-lg-2">
-            <div class="card draggable-card" draggable="true" data-task="Buy groceries">
+            <div
+              class="card draggable-card"
+              draggable="true"
+              data-task="Buy groceries"
+            >
               <div class="card-body text-center">
                 <h5 class="card-title mb-0">Buy groceries</h5>
               </div>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-2">
-            <div class="card draggable-card" draggable="true" data-task="Call mom">
+            <div
+              class="card draggable-card"
+              draggable="true"
+              data-task="Call mom"
+            >
               <div class="card-body text-center">
                 <h5 class="card-title mb-0">Do studying</h5>
               </div>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-2">
-            <div class="card draggable-card" draggable="true" data-task="Finish report">
+            <div
+              class="card draggable-card"
+              draggable="true"
+              data-task="Finish report"
+            >
               <div class="card-body text-center">
                 <h5 class="card-title mb-0">Clean the house</h5>
               </div>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-2">
-            <div class="card draggable-card" draggable="true" data-task="Go for a run">
+            <div
+              class="card draggable-card"
+              draggable="true"
+              data-task="Go for a run"
+            >
               <div class="card-body text-center">
                 <h5 class="card-title mb-0">Walk the dog</h5>
               </div>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-2">
-            <div class="card draggable-card" draggable="true" data-task="Read a book">
+            <div
+              class="card draggable-card"
+              draggable="true"
+              data-task="Read a book"
+            >
               <div class="card-body text-center">
                 <h5 class="card-title mb-0">Read a book</h5>
               </div>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-2">
-            <div class="card draggable-card" draggable="true" data-task="Plan weekend">
+            <div
+              class="card draggable-card"
+              draggable="true"
+              data-task="Plan weekend"
+            >
               <div class="card-body text-center">
                 <h5 class="card-title mb-0">Cook dinner</h5>
               </div>
@@ -138,7 +166,7 @@
     <div id="fireworkOverlay" class="firework-overlay-container"></div>
 
     <footer>
-      <p>Made with ❤️ by Irina Leeming</p>
+      <p>Made with ❤️ by Irina</p>
       <!-- Footer text -->
     </footer>
 
