Fix bug with the completed task message

--- a/index.html
+++ b/index.html
@@ -160,17 +160,22 @@
         </div>
       </div>
       <!-- End New: Draggable Cards Section -->
+
+      <div class="confetti-message"></div>
     </div>
 
-    <!-- This is the container for the firework effect and the message -->
-    <div id="fireworkOverlay" class="firework-overlay-container"></div>
+    <!-- Confetti effect container -->
+    <div id="tsparticles"></div>
 
     <footer>
       <p>Made with ❤️ by Irina</p>
       <!-- Footer text -->
     </footer>
 
-    <!-- Link to JavaScript -->
+    <!-- tsParticles library -->
+    <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
+
+    <!-- Your custom JavaScript -->
     <script src="assets/js/script.js"></script>
     <!-- Links the JavaScript file for functionality -->
     <!-- Bootstrap JS (optional, not strictly needed for grid/cards but good practice) -->
