Fix bug with druggable cards

--- a/index.html
+++ b/index.html
@@ -90,66 +90,42 @@
         <div class="row g-3 justify-content-center">
           <!-- col-6 for mobile (2 per row), col-md-3 for medium (4 per row), col-lg-2 for large (6 per row) -->
           <div class="col-6 col-md-3 col-lg-2">
-            <div
-              class="card draggable-card"
-              draggable="true"
-              data-task="Buy groceries"
-            >
+            <div class="card draggable-card" draggable="true" data-task="Buy groceries">
               <div class="card-body text-center">
                 <h5 class="card-title mb-0">Buy groceries</h5>
               </div>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-2">
-            <div
-              class="card draggable-card"
-              draggable="true"
-              data-task="Call mom"
-            >
+            <div class="card draggable-card" draggable="true" data-task="Do studying">
               <div class="card-body text-center">
                 <h5 class="card-title mb-0">Do studying</h5>
               </div>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-2">
-            <div
-              class="card draggable-card"
-              draggable="true"
-              data-task="Finish report"
-            >
+            <div class="card draggable-card" draggable="true" data-task="Clean the house">
               <div class="card-body text-center">
                 <h5 class="card-title mb-0">Clean the house</h5>
               </div>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-2">
-            <div
-              class="card draggable-card"
-              draggable="true"
-              data-task="Go for a run"
-            >
+            <div class="card draggable-card" draggable="true" data-task="Walk the dog">
               <div class="card-body text-center">
                 <h5 class="card-title mb-0">Walk the dog</h5>
               </div>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-2">
-            <div
-              class="card draggable-card"
-              draggable="true"
-              data-task="Read a book"
-            >
+            <div class="card draggable-card" draggable="true" data-task="Read a book">
               <div class="card-body text-center">
                 <h5 class="card-title mb-0">Read a book</h5>
               </div>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-2">
-            <div
-              class="card draggable-card"
-              draggable="true"
-              data-task="Plan weekend"
-            >
+            <div class="card draggable-card" draggable="true" data-task="Cook dinner">
               <div class="card-body text-center">
                 <h5 class="card-title mb-0">Cook dinner</h5>
               </div>
