--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         <!-- Button to add a new task; calls the "newElement" function -->
       </div>
 
-      <div id="completion-note">
-        Task tango! Click to check, click to uncheck. Let's get things done!
+      <div id="instruction-note">
+        <h2 class="secondary-heading">Click to check, click to uncheck!</h2>
       </div>
 
       <div class="confetti-message"></div>
