Add colour animation for the note

--- a/index.html
+++ b/index.html
@@ -79,7 +79,14 @@
       </div>
 
       <div id="instruction-note">
-        <h2 class="secondary-heading">Click to check, click to uncheck!</h2>
+        <h2 class="secondary-heading instruction-animated">
+          <span class="title-word title-word-1">Click</span>
+          <span class="title-word title-word-2">to</span>
+          <span class="title-word title-word-3">check,</span>
+          <span class="title-word title-word-4">click</span>
+          <span class="title-word title-word-1">to</span>
+          <span class="title-word title-word-2">uncheck!</span>
+        </h2>
       </div>
 
       <div class="confetti-message"></div>
