--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
       <!-- New: Draggable Cards Section - Moved to bottom of main content -->
       <div class="draggable-cards-section container mt-4">
-        <h2 class="text-center mb-3">Drag & Drop Ideas</h2>
+        <h2 class="draggable-heading babel-effect">Drag &amp; Drop Ideas</h2>
         <div class="row g-3 justify-content-center">
           <!-- col-6 for mobile (2 per row), col-md-3 for medium (4 per row), col-lg-2 for large (6 per row) -->
           <div class="col-6 col-md-3 col-lg-2">
@@ -196,5 +196,35 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+
+    <svg class="distort">
+      <filter id="distortionFilter">
+        <feTurbulence
+          type="fractalNoise"
+          baseFrequency="2.01 .01"
+          numOctaves="5"
+          seed="2"
+          stitchTiles="noStitch"
+          x="0%"
+          y="0%"
+          width="100%"
+          height="100%"
+          result="noise"
+        ></feTurbulence>
+        <feDisplacementMap
+          in="SourceGraphic"
+          in2="noise"
+          scale="0"
+          xChannelSelector="R"
+          yChannelSelector="B"
+          x="0%"
+          y="0%"
+          width="100%"
+          height="100%"
+          filterUnits="userSpaceOnUse"
+        ></feDisplacementMap>
+      </filter>
+    </svg>
   </body>
 </html>
