--- a/index.html
+++ b/index.html
@@ -37,12 +37,18 @@
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      xintegrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
   </head>
   <body class="light">
     <!-- Default theme is light; toggled by the "dark" class -->
+
+    <!-- Confetti effect container (can be here or at the end, but outside .page-wrapper) -->
+    <div
+      id="tsparticles"
+      style="position: fixed; inset: 0; pointer-events: none; z-index: 1000"
+    ></div>
 
     <div class="page-wrapper">
       <!-- Wrapper for the main content -->
@@ -53,6 +59,7 @@
         <h1 class="shadow-dance-text">To-Do List</h1>
         <!-- Header text with animated shadow effect -->
         <div class="theme-toggle">
+          <!-- Removed title attributes to prevent text display -->
           <button id="lightMode" class="sun active">☀️</button>
           <button id="darkMode" class="moon">🌙</button>
         </div>
@@ -72,7 +79,7 @@
         <!-- This is the container for the styled empty task message -->
         <div id="emptyTaskMessage" class="message-container"></div>
 
-        <button onclick="newElement()" class="addBtn" id="addBtnDropTarget">
+        <button onclick="newElement()" class="addBtn" id="addBtnDropTarget" title="Add task">
           <i class="fa-solid fa-check"></i>
         </button>
         <!-- Button to add a new task; calls the "newElement" function -->
@@ -89,6 +96,7 @@
         </h2>
       </div>
 
+      <!-- Confetti message container, only one is needed -->
       <div class="confetti-message"></div>
 
       <!-- Task list -->
@@ -169,35 +177,16 @@
         </div>
       </div>
       <!-- End New: Draggable Cards Section -->
-
-      <div class="confetti-message"></div>
     </div>
+    <!-- End of .page-wrapper -->
 
-    <!-- Confetti effect container -->
-    <div
-      id="tsparticles"
-      style="position: fixed; inset: 0; pointer-events: none; z-index: 1000"
-    ></div>
-
+    <!-- Footer moved outside .page-wrapper to span full width -->
     <footer>
       <p>Made with ❤️ by Irina</p>
       <!-- Footer text -->
     </footer>
 
-    <!-- tsParticles library -->
-    <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
-
-    <!-- Your custom JavaScript -->
-    <script src="assets/js/script.js"></script>
-    <!-- Links the JavaScript file for functionality -->
-    <!-- Bootstrap JS (optional, not strictly needed for grid/cards but good practice) -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-
+    <!-- Distort SVG element: hidden but filters are accessible -->
     <svg class="distort">
       <filter id="distortionFilter">
         <feTurbulence
@@ -226,5 +215,20 @@
         ></feDisplacementMap>
       </filter>
     </svg>
+
+    <!-- Scripts and SVG filter here -->
+    <!-- tsParticles library -->
+    <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
+
+    <!-- Your custom JavaScript -->
+    <script src="assets/js/script.js"></script>
+    <!-- Links the JavaScript file for functionality -->
+    <!-- Bootstrap JS (optional, not strictly needed for grid/cards but good practice) -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      xintegrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
   </body>
 </html>
